half of JS done

--- a/index.html
+++ b/index.html
@@ -9,49 +9,24 @@
 </head>
 
 <body>
-    <form>
+    <form id="task-form">
         <div class="container">
             <div class="yellow-head"></div>
             <h1 class="header">To-Do List</h1>
-            <button class="list-sort-type-button"></button>
+            <button id="sort-list" class="list-sort-type-button" type="button"></button>
             </br>
             <label class="input-container">
-                <ul class="list">
+                <ul id="task-list" class="list">
                     <div class="input-bar-container">
-                        <input type="text" class="input-bar">
-                        <button type="button" class="input-bar-delete-button">
-                            <img class="input-bar-delete">
+                        <input id="task-input" type="text" class="input-bar">
+                        <button id="input-delete-button" type="button" class="input-bar-delete-button">
                         </button>
                     </div>
-                    <li class="list-element-container">
-                        <p class="list-element-text">Qwqqqqqqqqqqqw</p>
-                        <button type="button" class="list-element-delete-button">
-                            <img class="input-bar-delete">
-                        </button>
-                    </li>
-                    <li class="list-element-container">
-                        <p class="list-element-text">Qwqqqqqqqqqqqw</p>
-                        <button type="button" class="list-element-delete-button">
-                            <img class="input-bar-delete">
-                        </button>
-                    </li>
-                    <li class="list-element-container">
-                        <p class="list-element-text">Qwqqqqqqqq343qqqw</p>
-                        <button type="button" class="list-element-delete-button">
-                            <img class="input-bar-delete">
-                        </button>
-                    </li>
-                    <li class="list-element-container">
-                        <p class="list-element-text">Qwqqqqqqqqqqqw</p>
-                        <button type="button" class="list-element-delete-button">
-                            <img class="input-bar-delete">
-                        </button>
-                    </li>
                 </ul>
             </label>
             </br>
             <label class="add-task">
-                <button type="button" class="add-task-button">+</button>
+                <button id="add-task" type="submit" class="add-task-button">+</button>
                 <p>Добавить</p>
             </label>
         </div>
