half of JS done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="yellow-head"></div>
             <h1 class="header">To-Do List</h1>
-            <button id="sort-list" class="list-sort-type-button" type="button"></button>
+            <button id="sort-list" class="list-sort-type-button-increase" type="button"></button>
             </br>
             <label class="input-container">
                 <ul id="task-list" class="list">
